# social_rating

./: database.db  keep_alive.py  main.py  prefixes.json  pyproject.toml  requirements.txt
cogs/: manage.py
templates/: helloworld.html
